SonarQube Bugs Fixes